--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.1:
+    * Set TERM to 'pcconsole'.
     * Remove folder prefix in SquirrelMail.
     * Remove non-exist function call: openldap_tls_config. Thanks
       ipostfix <at> gmail.com
