--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Enable SSL support for MySQL.
     * Fix issue of TERM variable. Thanks yao.xu at
       http://bbs.iredmail.org.
     * Remove some tool script.
