[svn r517] [iRedMail]     * Fix mail attachment size in ExtMail. Thanks tongds@gmail.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Fix mail attachment size in ExtMail. Thanks tongds@gmail.
     * Add patch to fix login security issue. Reference:
       https://sourceforge.net/mailarchive/forum.php?thread_name=49057E07.3060806%40gmail.com&forum_name=postfixadmin-devel
     * Improve dovecot quota warning support.
