--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Update phpMyAdmin to 2.11.9.3.
     * Set default language to zh_CN in horde, roundcube, squirrelmail.
     * Make Roundcube WebMail work while use OpenLDAP as backend, use OpenLDAP
       as global ldap address book.
