--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Update dovecot to 1.1.6.
     * Improve mailgraph, it can display greylist counter now. Merge css code
       to mailgraph.cgi.
     * Update phpMyAdmin to 2.11.9.3.
