--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Initialize import php-eaccelerator.
     * Update clamav to 0.94.1. Thanks to chenwei for his remind.
     * Update php-rrdtool, rrdtool to 1.2.28.
     * Initialize import awstats as web and mail log analyzer.
