--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,8 @@
 iRedMail-0.3.2:
+    * Make horde sql database use utf8 as default charset. Thanks
+      bruce.16899@gmail for his remind.
     * Add global ldap address book for horde when use OpenLDAP as backend.
-      Thanks bruce.16899@gmail for this remind.
+      Thanks bruce.16899@gmail for his remind.
     * Initialize import php-eaccelerator.
     * Update clamav to 0.94.1. Thanks to chenwei for his remind.
     * Update php-rrdtool, rrdtool to 1.2.28.
