--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Make Horde Ingo mail filter rules manager works with pysieved.
     * Make horde sql database use utf8 as default charset. Thanks
       bruce.16899@gmail for his remind.
     * Add global ldap address book for horde when use OpenLDAP as backend.
