--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.3.2:
+    * Add hooks for pureftpd and openfire support.
+    * Split dialog config, make webmail program in a standlone page.
     * Use unix socket to connect mysql server by default.
     * Make Horde Ingo mail filter rules manager works with pysieved.
     * Make horde sql database use utf8 as default charset. Thanks
