--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,5 @@
 iRedMail-0.3.2:
-    * Fix change password issue in ExtMail-1.0.5. Thanks ilove.pan@gmail.
+    * Fix change password issue in ExtMail-1.0.5. Thanks ilovell.pan@gmail.
 
 iRedMail-0.3.2-beta1:
     * Fix missing php-mysql installation. Thanks webyuhang@hotmail.
