[svn r592] [iRedMail]     * Clear default account in ExtMail global address book.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.2:
+    * Clear default account in ExtMail global address book.
     * Fix change password issue in ExtMail-1.0.5. Thanks ilovell.pan@gmail.
 
 iRedMail-0.3.2-beta1:
