--- a/iRedAdmin/i18n/en_US/LC_MESSAGES/iredadmin.po
+++ b/iRedAdmin/i18n/en_US/LC_MESSAGES/iredadmin.po
@@ -1,17 +1,17 @@
-# Translations template for PROJECT.
+# English (United States) translations for PROJECT.
 # Copyright (C) 2008 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2008.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: michaelbibby@gmail.com\n"
-"POT-Creation-Date: 2008-11-28 23:25+0800\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2008-11-29 20:48+0800\n"
+"PO-Revision-Date: 2008-11-29 20:55+0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: en_US <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,13 +19,5 @@ msgstr ""
 
 #: ../templates/default/index.html:6
 msgid "Message"
-msgstr ""
-
-#: ../templates/default/index.html:7
-msgid "Message2"
-msgstr ""
-
-#: ../templates/default/index.html:8
-msgid "Message3"
-msgstr ""
+msgstr "Message..."
 
