--- a/iRedAdmin/i18n/zh_CN/LC_MESSAGES/iredadmin.po
+++ b/iRedAdmin/i18n/zh_CN/LC_MESSAGES/iredadmin.po
@@ -5,23 +5,19 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2008-11-30 00:04+HKT\n"
+"POT-Creation-Date: 2008-11-30 00:27+HKT\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Transfer-Encoding: utf-8\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
-#: ../iredadmin.py:39
+#: ../iredadmin.py:40
 msgid "Message"
-msgstr "信息"
-
-#: ../templates/default/index.html:4
-msgid "Hello"
-msgstr "您好"
+msgstr "中文信息"
 
 #: ../templates/default/index.html:6
 msgid "World"
