--- a/iRedOS/ChangeLog
+++ b/iRedOS/ChangeLog
@@ -1,9 +1,11 @@
 iRedOS-0.1.2:
-    * Fix kickstart issue, you can install in interactive mode. Add missing
-      package: at, binutils.
+    * Add missing package: dos2unix, at, binutils, libtool-ltdl, gettext,
+      libXi, libXext, libX11, libXau, libSM, libICE, pax, cups, ed, m4,
+      libXt, libXdmcp, xorg-x11-filesystem.
+    * Fix kickstart issue, user can set network setting and hostname by
+      their own.
     * Remove pm-utils.
     * Add missing packages: openldap-clients, openldap-servers, php-ldap.
       Thanks bruce.16899@gmail.
-    * Add missing package: dos2unix.
     * Add missing package: tmpwatch. Thanks westgo@bbs.iredmail.org.
     * Add missing package: iptables. Thanks EdisonWang2007@gmail.
