--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.3.2:
+    * Remove two extra packages: roundcubemail-0.1.1-buttons-zh_CN.tar.bz2,
+      roundcubemail-0.1.1-skin-default-labels.tar.bz2.
     * Update clamav to 0.94.2.
     * Add patch for ExtMail to make it create user maildir automatic.
     * Clear default account in ExtMail global address book.
