--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.3.2:
+    * Fix MySQL password issue while contains special characters. Thanks
+      xcrossbow@gmail.
     * Make some command operating system independent.
     * Update Dovecot to 1.1.7.
     * Update SquirrelMail to 1.4.17.
