[svn r683] [iRedMail] Reduce postfix queue run retry time to '300s'. [wiki] Add changelog details compared to 0.3.2.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Reduce postfix queue run retry time to '300s'.
     * Add one more pcre expression for smtpd helo restriction to block client
       which use dynamic ip address. Thanks muniao@gmail.
     * Fix incorrect crontab job for vmail user. Thanks xcrossbow@gmail.
