--- a/iRedOS/ChangeLog
+++ b/iRedOS/ChangeLog
@@ -1,4 +1,5 @@
-iRedOS-0..3:
+iRedOS-0.1.3:
+    * Add missing package 'perl-LDAP'. Thanks shake.chen@gmail.
     * Add 'unzip' in ks file. Thanks shake.chen@gmail.
 
 iRedOS-0.1.2:
