--- a/iRedMail/TODO
+++ b/iRedMail/TODO
@@ -1,3 +1,5 @@
+* Update dovecot to 1.1.8.
+* Update dovecot-sieve to 1.1.6.
 * Add directory alias to ssl.conf.
 * Make phpldapadmin, postfixadmin, phpmyadmin ssl only.
 * SRS.
