--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Update packages: Dovecot => 1.1.8, rrdtool => 1.2.29.
     * Fix incorrect parameter in postfix ldap lookup table: debug_level =>
       debuglevel.
     * Add <Directory> container to disable autoindex in apache. Thanks
