--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,9 @@
 iRedMail-0.3.3:
-    * Mark iptables as enabled service.
-    * Update packages: Dovecot => 1.1.8, rrdtool => 1.2.29.
+    * Use variable to control whether download packages from official yum
+      repository or not.
+    * Hardcode CONFIG_FILE and TIP_FILE location, under '/root'.
+    * Mark iptables as a must service.
+    * Update packages: Dovecot => 1.1.8, rrdtool => 1.2.29, postfix => 2.5.6.
     * Fix incorrect parameter in postfix ldap lookup table: debug_level =>
       debuglevel.
     * Add <Directory> container to disable autoindex in apache. Thanks
