--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Use crypted MD5 password string as random password. 
     * Hardcode PostfixAdmin admin user name and password (conf/postfixadmin).
     * Do not import domain admin and first normail user of first domain.
     * Update dovecot-sieve to 1.1.6.
