--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,7 +1,8 @@
 iRedMail-0.3.3:
+    * Add patches for roundcube-0.2-stable, used to change ldap password,
+      fix undefined index error.
     * Directory renamed: tools/ => dialog/.
-    * Update roundcube webmail to 0.2-stable, and patch to change ldap
-      password.
+    * Update roundcube webmail to 0.2-stable.
     * Make phpLDAPadmin, phMyAdmin, PostfixAdmin can be accessed via HTTPS
       only.
     * Improve LDAP schema, use 'enabledService=XXX' instead of
