--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Update rrdtool to 1.2.30.
     * Enable preview pane in roundcube by default.
     * Add patch to disable extmail welcome msg, typo in index page.
     * Remove phpLDAPadmin templates.
