--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Use SSHA as default password scheme in OpenLDAP.
     * Add global ldap address book in ExtMail for ldap backend.
     * Avoid quote in HOSTNAME variable. Thanks shake.chen@gmail.
     * Update rrdtool to 1.2.30.
