--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Add patch for roundcube-0.2 to change ldap password.
     * Use mod_auth_mysql for user auth in awstats.
     * Improve LDAP schema.
     * Add global ldap address book in ExtMail for ldap backend.
