--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.3.3:
+    * Change ${SIEVE_DIR} to ${VMAIL_USER_HOME_DIR}/sieve/.
     * Add patch for roundcube-0.2 to change ldap password.
     * Use mod_auth_mysql for user auth in awstats.
     * Improve LDAP schema.
