[svn r834] [iRedMail]     * Replace 'gn' by 'givenName' in roundcube global ldap address book.       Thanks shake.chen@gmail.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.4.1:
+    * Replace 'gn' by 'givenName' in roundcube global ldap address book.
+      Thanks shake.chen@gmail.
     * Add script for mysql database backup: tools/backup_MySQL.sh.
 
 iRedMail-0.4:
