[svn r841] [iRedMail] Remove unnecessary attribute.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,6 @@
 iRedMail-0.4.1:
-    * Add max length limit for several ldap attributes.
+    * Add max length limit for several ldap attributes, remove unnecessary
+      attribute.
     * Adjust mail_location setting in dovecot.
     * Replace 'gn' by 'givenName' in roundcube global ldap address book.
       Thanks shake.chen@gmail.
