--- a/iRedMail/README
+++ b/iRedMail/README
@@ -17,7 +17,7 @@ Full Installation Guide:
    shipped within iRedMail:
 
    - English: http://code.google.com/p/iredmail/wiki/Installation
-   - Chinese: http://code.google.com/p/iredmail/wiki/Installation_zh
+   - Chinese: http://www.iredmail.org/wiki/index.php?title=IRedMail_Installation_Guide
 
 ========
 *) Authors:
