[svn r863] [iRedMail] Append 'accessPolicy' to index list. * Sync upgrade tutorial.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,7 @@
 iRedMail-0.4.1:
     * Add attribute for mail list access policy control.
-    * Add missing index attributes in OpenLDAP: listMember, listOwner.
+    * Add missing index attributes in OpenLDAP: listMember, listOwner,
+      accessPolicy.
     * userPassword & accountStatus are optional for objectclass mailAdmin.
     * Fixed OpenLDAP ACL.
     * Fixed: Make awstats access via https only.
