[svn r868] [wiki] Sync.

--- a/iRedMail/README
+++ b/iRedMail/README
@@ -20,6 +20,8 @@ Full Installation Guide:
    - Chinese: http://www.iredmail.org/wiki/index.php?title=IRedMail_Installation_Guide
 
 ========
+*) License: GPL v2
+
 *) Authors:
     - http://code.google.com/p/iredmail/wiki/Members
 
@@ -32,6 +34,3 @@ Full Installation Guide:
 *) Community:
    - International: http://groups.google.com/p/iredmail/
    - Chinese: http://www.iredmail.org/bbs/
-
-*) Wiki page (include step-by-step tutorial, in Chinese):
-   - http://www.iredmail.org/wiki/
