--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.4.1:
+    * Update SquirrelMail plugin: compatibility-2.0.14.
+    * Update dovecot to 1.1.13.
     * Add group mail/alias support for openldap backend.
     * Add attribute for mail list access policy control.
     * Add missing index attributes in OpenLDAP: listMember, listOwner,
