[svn r887] [iRedMail]     * Add backup mx detect in virtual domain lookup.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.4.1:
+    * Add backup mx detect in virtual domain lookup.
     * Update phpMyAdmin to 2.11.9.5.
     * Address of mail group/list will be autocomplete while you type
       recipients in roundcube now.
