--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.4.1:
+    * Known issue: pysieved will cause a zombie process.
     * Update clamav to 0.95.1.
     * Update roundcube and related patches to 0.2.1-stable.
     * managesieve service (pysieved) is now not a optional function.
@@ -21,7 +22,6 @@ iRedMail-0.4.1:
     * Say goodbye to Horde.
     * Create symbol link for all web-based programs, so that we don't have
       to restart apache while upgrade them.
-    * Fix zombie process issue with pysieved.
     * Fix file permission: /etc/pysieved.ini, should be owned by vmail:vmail.
     * Add max length limit for several ldap attributes, remove unnecessary
       attribute.
