[svn r903] [iRedMail]     * Plugin used to change password stored in ldap for roundcube works now.     * Fix directory container location in apache.     * Bump version: 0.4.1. It's ready now.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,4 @@
-iRedMail-current:
+iRedMail-0.4.1:
     * POP3/IMAP are enabled by default, dialog page removed.
     * Known issue: pysieved will cause a zombie process.
     * Update clamav to 0.95.1.
