[svn r904] [iRedMail] Sync changelog & upgrade tutorial: +    * Add /robots.txt to disallow search engines.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.4.1:
+    * Add /robots.txt to disallow search engines.
     * POP3/IMAP are enabled by default, dialog page removed.
     * Known issue: pysieved will cause a zombie process.
     * Update clamav to 0.95.1.
