--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -18,7 +18,7 @@ iRedMail-0.4.1:
     * Update dovecot to 1.1.13.
     * Add group mail/alias support for openldap backend.
     * Add attribute for mail list access policy control.
-    * Add missing index attributes in OpenLDAP: listMember, listOwner,
+    * Add missing index attributes in OpenLDAP: listMember, listAllowedUser,
       accessPolicy.
     * userPassword & accountStatus are optional for objectclass mailAdmin.
     * Fixed OpenLDAP ACL.
