[svn r926] [iRedMail] Add 'cn' for 'mailList' objectclass.

--- a/iRedMail/README
+++ b/iRedMail/README
@@ -31,6 +31,4 @@ Full Installation Guide:
 *) Issue tracker & bug report:
     - http://code.google.com/p/iredmail/issues/list
 
-*) Community:
-   - International: http://groups.google.com/p/iredmail/
-   - Chinese: http://www.iredmail.org/bbs/
+*) Forum: http://www.iredmail.org/forum/
